--- a/webapi/src/MccSoft.TemplateApp.App/MccSoft.TemplateApp.App.csproj
+++ b/webapi/src/MccSoft.TemplateApp.App/MccSoft.TemplateApp.App.csproj
@@ -13,8 +13,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <!-- SpaYarp configuration -->
     <SpaRoot>../../../frontend</SpaRoot>
-    <SpaClientUrl>http://localhost:3149</SpaClientUrl>
-    <SpaLaunchCommand>yarn start</SpaLaunchCommand>
+    <SpaProxyServerUrl>https://localhost:5001</SpaProxyServerUrl>
+    <SpaProxyLaunchCommand>yarn start</SpaProxyLaunchCommand>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -40,7 +40,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AspNetCore.SpaYarp" Version="1.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="6.0.5"/>
     <PackageReference Include="Audit.NET.PostgreSql" Version="19.0.2" />
     <PackageReference Include="Hangfire.AspNetCore" Version="1.7.28" />
     <PackageReference Include="Hangfire.Core" Version="1.7.28" />
@@ -83,7 +83,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
-    <PackageReference Include="Shaddix.OpenIddict.ExternalAuthentication" Version="1.1.4" />
+    <PackageReference Include="Shaddix.OpenIddict.ExternalAuthentication" Version="1.2.3" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.15.0" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.14" />
 
