--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -85,9 +85,16 @@
         ],
         "RedirectUris": [
           "https://localhost:5001/auth/openid-callback",
-          "http://localhost:3149/auth/openid-callback",
           "https://template.mcc-tomsk.de/auth/openid-callback",
           "https://template.mcc-soft.de/auth/openid-callback"
+        ],
+        "PostLogoutRedirectUris": [
+          "https://localhost:5001/auth/signout-callback",
+          "https://localhost:5001/auth/signout-callback?popup=1",
+          "https://template.mcc-tomsk.de/auth/signout-callback",
+          "https://template.mcc-tomsk.de/auth/signout-callback?popup=1",
+          "https://template.mcc-soft.de/auth/signout-callback",
+          "https://template.mcc-soft.de/auth/signout-callback?popup=1"
         ]
       }
     },
