--- a/.ci/azure-pipelines.yml
+++ b/.ci/azure-pipelines.yml
@@ -106,7 +106,7 @@ stages:
           runOnce:
             deploy:
               steps:
-                - template: scripts/azure-deploy-template.yml
+                - template: ./azure-deploy-template.yml
 
   - stage: TagDevSources
     dependsOn: DeployToDev
