--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -135,7 +135,8 @@
     }
   },
   "General": {
-    "SiteUrl": "https://templateapp.mcc-tomsk.de"
+    "SiteUrl": "https://templateapp.mcc-tomsk.de",
+    "CORS": ""
   },
   "DefaultUser": {
     "Username": "admin",
