--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -136,7 +136,7 @@
   },
   "General": {
     "SiteUrl": "https://templateapp.mcc-tomsk.de",
-    "CORS": ""
+    "CORS": "https://localhost:5001"
   },
   "DefaultUser": {
     "Username": "admin",
