--- a/frontend/package.json
+++ b/frontend/package.json
@@ -94,6 +94,7 @@
   },
   "scripts": {
     "start": "vite",
+    "start-remote": "BACKEND_URI=https://template.mcc-tomsk.de vite",
     "build": "vite build && yarn build-scss-for-razor",
     "build-scss-for-razor": "sass --load-path=./ src/razor.scss ../webapi/src/MccSoft.TemplateApp.App/wwwroot/css/frontend.css",
     "typecheck": "tsc",
