use relative uris for openiddict

--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -86,18 +86,14 @@
         "RedirectUris": [
           "https://localhost:5001/auth/openid-callback",
           "https://localhost:5001/auth/openid-callback?popup=1",
-          "https://template.mcc-tomsk.de/auth/openid-callback",
-          "https://template.mcc-tomsk.de/auth/openid-callback?popup=1",
-          "https://template.mcc-soft.de/auth/openid-callback",
-          "https://template.mcc-soft.de/auth/openid-callback?popup=1"
+          "/auth/openid-callback",
+          "/auth/openid-callback?popup=1"
         ],
         "PostLogoutRedirectUris": [
           "https://localhost:5001/auth/signout-callback",
           "https://localhost:5001/auth/signout-callback?popup=1",
-          "https://template.mcc-tomsk.de/auth/signout-callback",
-          "https://template.mcc-tomsk.de/auth/signout-callback?popup=1",
-          "https://template.mcc-soft.de/auth/signout-callback",
-          "https://template.mcc-soft.de/auth/signout-callback?popup=1"
+          "/auth/signout-callback",
+          "/auth/signout-callback?popup=1"
         ]
       }
     },
