use openid in Swagger (fix authentication in Swagger)

--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.Development.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.Development.json
@@ -45,5 +45,19 @@
   },
   "Audit": {
     "Enabled": true
+  },
+  "OpenId": {
+    "Clients": {
+      "web_client": {
+        "RedirectUris": [
+          "https://localhost:5001/auth/openid-callback",
+          "https://localhost:5001/auth/openid-callback?popup=1",
+          "/auth/openid-callback",
+          "/auth/openid-callback?popup=1",
+          "/swagger/oauth2-redirect.html",
+          "https://localhost:5001/swagger/oauth2-redirect.html"
+        ]
+      }
+    }
   }
 }
