--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -87,7 +87,8 @@
           "https://localhost:5001/auth/openid-callback",
           "https://localhost:5001/auth/openid-callback?popup=1",
           "/auth/openid-callback",
-          "/auth/openid-callback?popup=1"
+          "/auth/openid-callback?popup=1",
+          "/swagger/oauth2-redirect.html"
         ],
         "PostLogoutRedirectUris": [
           "https://localhost:5001/auth/signout-callback",
