change site url

--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -132,7 +132,7 @@
     }
   },
   "General": {
-    "SiteUrl": "https://templateapp.mcc-tomsk.de",
+    "SiteUrl": "https://template.mcc-tomsk.de",
     "CORS": "https://localhost:5001"
   },
   "DefaultUser": {
