--- a/.ci/azure-pipelines-cache-template.yml
+++ b/.ci/azure-pipelines-cache-template.yml
@@ -10,12 +10,12 @@ steps:
       packageType: 'sdk'
       version: '6.x'
 
-#  - task: Cache@2
-#    inputs:
-#      key: 'yarn-cache|$(Agent.OS)|./yarn.lock'
-#      path: $(Build.SourcesDirectory)/.yarn/cache
-#    displayName: Cache yarn cache
-#    continueOnError: true
+  - task: Cache@2
+    inputs:
+      key: 'yarn-cache|$(Agent.OS)|./yarn.lock'
+      path: $(Build.SourcesDirectory)/.yarn/cache
+    displayName: Cache yarn cache
+    continueOnError: true
 
   - task: Cache@2
     inputs:
