experimenting with env variables

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fluentui/react": "8.71.0",
+    "@fluentui/react": "8.77.1",
     "@fortawesome/free-solid-svg-icons": "6.1.1",
     "@fortawesome/react-fontawesome": "0.1.18",
     "@lottiefiles/jlottie": "1.2.1",
@@ -11,7 +11,6 @@
     "@reduxjs/toolkit": "1.8.2",
     "@sentry/react": "6.19.7",
     "@sentry/tracing": "6.19.7",
-    "@statoscope/webpack-plugin": "5.20.1",
     "@tippyjs/react": "4.2.6",
     "@types/react-paginate": "7.1.1",
     "@types/react-table": "7.7.10",
@@ -52,13 +51,14 @@
     "react-tooltip": "^4.2.21",
     "redux": "4.1.0",
     "redux-persist": "6.0.0",
-    "sass": "1.51.0",
-    "source-map-explorer": "2.5.2",
+    "sass": "1.53.0",
     "throttle-debounce": "3.0.1",
     "use-query-params": "1.2.3",
     "web-vitals": "1.1.2"
   },
   "devDependencies": {
+    "@import-meta-env/cli": "0.1.7",
+    "@import-meta-env/unplugin": "0.1.8",
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "11.1.0",
     "@testing-library/user-event": "12.1.10",
@@ -87,7 +87,6 @@
     "rollup-plugin-visualizer": "5.6.0",
     "typescript": "4.7.2",
     "vite": "2.9.9",
-    "vite-plugin-environment": "1.1.1",
     "vite-plugin-mkcert": "1.6.4",
     "vite-plugin-react-svg": "0.2.0",
     "vite-plugin-svgr": "1.1.0",
