--- a/.ci/azure-pipelines.yml
+++ b/.ci/azure-pipelines.yml
@@ -36,6 +36,11 @@ stages:
               yarn copy-frontend
             displayName: 'build frontend'
 
+          - script: |
+              npx pkg ./node_modules/@import-meta-env/cli/bin/import-meta-env.js -t node16-alpine -o import-meta-env
+              copy ./import-meta-env ./publish/
+            displayName: 'package import-meta-env/cli'
+
 #          - script: |
 #              mkdir ./cobertura
 #              find '$(Agent.TempDirectory)' -name 'coverage.cobertura.xml' -exec cp --backup=numbered -t ./cobertura {} +
