--- a/.ci/azure-pipelines.yml
+++ b/.ci/azure-pipelines.yml
@@ -37,8 +37,7 @@ stages:
             displayName: 'build frontend'
 
           - script: |
-              npx pkg ./node_modules/@import-meta-env/cli/bin/import-meta-env.js -t node16-alpine -o import-meta-env
-              ls
+              npx pkg ./node_modules/@import-meta-env/cli/bin/import-meta-env.js -t node16-linux -o import-meta-env
               cp  ./import-meta-env ./publish/
             displayName: 'package import-meta-env/cli'
 
