--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "frontend": "yarn workspace @templateApp/frontend",
     "build-dotnet-version": "cross-env-shell dotnet publish webapi/src/MccSoft.TemplateApp.App/MccSoft.TemplateApp.App.csproj -c Release -o publish $VERSION",
     "build-dotnet": "rimraf publish && cross-env VERSION=\\\"/p:Version\\\"=\\\"$npm_package_version\\\" yarn build-dotnet-version",
-    "build-frontend": "cross-env-shell REACT_APP_VERSION=$npm_package_version yarn frontend build && yarn copyfiles -u 1 frontend/.env frontend/build/",
-    "copy-frontend": "yarn copyfiles -u 2 \"frontend/build/**/*\" \"publish/wwwroot\"",
+    "build-frontend": "cross-env-shell REACT_APP_VERSION=$npm_package_version yarn frontend build",
+    "copy-frontend": "yarn copyfiles -u 2 \"frontend/build/**/*\" \"publish/wwwroot\" && yarn copyfiles -u 1 frontend/.env publish/wwwroot",
     "docker-build": "cross-env-shell docker build -t templateapp:latest templateapp:$npm_package_version -f publish/Dockerfile publish",
     "build-with-docker": "yarn build && yarn docker-build",
-    "build": "yarn frontend typecheck && yarn build-dotnet && yarn build-frontend && yarn copy-frontend",
+    "build": "yarn build-dotnet && yarn build-frontend && yarn copy-frontend",
     "postinstall": "cd webapi && dotnet tool restore",
     "run-csharpier": "cd webapi && dotnet csharpier .",
     "run-prettier": "prettier -w ."
