fix OpenId authentication (AzureAD)

--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.Development.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.Development.json
@@ -9,6 +9,11 @@
       }
     }
   },
+  "Clients": {
+    "web_client": {
+      "AccessTokenLifetime": 60
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
