Fix Hangfire initialization
- Added example (ProductDataLoggerJob)
- Added custom helper for registering a Job and its Settings

--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -153,5 +153,8 @@
     "Password": "871H2ZzBWAS5",
     "From": "mcc.template.app@gmail.com",
     "FromName": "Template App"
+  },
+  "ProductDataLoggerJobSettings": {
+    "CronExpression": "0 */1 * * *"
   }
 }
