patch test works in component tests

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "typecheck": "yarn frontend typecheck",
     "start": "yarn frontend start",
     "start-remote": "yarn frontend start-remote",
-    "generate-api-clients": "yarn frontend generate-api-clients",
+    "generate-api-client": "yarn frontend generate-api-client",
+    "generate-api-client-remote": "yarn frontend generate-api-client-remote",
     "rename": "node scripts/rename-script.js",
     "frontend": "yarn workspace @templateApp/frontend",
     "build-dotnet-version": "cross-env-shell dotnet publish webapi/src/MccSoft.TemplateApp.App/MccSoft.TemplateApp.App.csproj -c Release -o publish $VERSION",
