#12 Fix Google authentication when running locally. Switch ports of backend/frontend. Bring back OpenId clients seeding.

--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.Development.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.Development.json
@@ -5,7 +5,7 @@
         "Url": "http://*:48728"
       },
       "Https": {
-        "Url": "https://*:5003"
+        "Url": "https://*:5001"
       }
     }
   },
@@ -64,5 +64,8 @@
         ]
       }
     }
+  },
+  "General": {
+    "SiteUrl": "https://localhost:5003"
   }
 }
