DOTNET_HOSTBUILDER__RELOADCONFIGONCHANGE: false when running tests

--- a/.ci/azure-pipelines-tests-shared.yml
+++ b/.ci/azure-pipelines-tests-shared.yml
@@ -23,4 +23,6 @@ steps:
       arguments:
       projects: 'webapi/tests/*/*.csproj'
       publishTestResults: true
+    env:
+      DOTNET_HOSTBUILDER__RELOADCONFIGONCHANGE: false
     displayName: 'dotnet test'
