--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prettier": "2.6.2",
     "renamer": "4.0.0",
     "rimraf": "3.0.2",
+    "semver": "7.3.7",
     "yargs": "17.0.1"
   },
   "workspaces": [
