adjust semver comparison

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,8 +47,8 @@
     "react-router": "6.3.0",
     "react-router-dom": "6.3.0",
     "react-table": "7.7.0",
-    "react-textarea-autosize": "^8.3.2",
-    "react-tooltip": "^4.2.21",
+    "react-textarea-autosize": "8.3.4",
+    "react-tooltip": "4.2.21",
     "redux": "4.1.0",
     "redux-persist": "6.0.0",
     "sass": "1.53.0",
