adjust prettier setup for vscode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,4 +9,6 @@
   "eslint.packageManager": "yarn",
   "eslint.run": "onSave",
 
+  "editor.formatOnSave": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
