--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -131,7 +131,7 @@
     }
   },
   "General": {
-    "SiteUrl": "https://template.mcc-tomsk.de",
+    "SiteUrl": "https://template.mcc-soft.de",
     "CORS": "https://localhost:5003"
   },
   "DefaultUser": {
@@ -145,7 +145,7 @@
     "Secret": "fDmp1K2YveBbfDmp"
   },
   "Email": {
-    "SiteUrl": "https://templateapp.mcc-tomsk.de",
+    "SiteUrl": "https://templateapp.mcc-soft.de",
     "Host": "smtp.gmail.com",
     "Port": 465,
     "IsSecureConnection": true,
