change URLs to mcc-soft.de

--- a/scripts/.env_template
+++ b/scripts/.env_template
@@ -1,5 +1,5 @@
-EMAIL=templateapp@mcc-tomsk.de
-VIRTUAL_HOST=template.mcc-tomsk.de
+EMAIL=templateapp@mcc-soft.de
+VIRTUAL_HOST=template.mcc-soft.de
 Sentry__Dsn=https://b00b94bddfeb4097a5078a6dc2bf5f03@o920098.ingest.sentry.io/5864957
 Serilog__Remote__Server=logs-01.loggly.com
 Serilog__Remote__Port=443
