--- a/frontend/package.json
+++ b/frontend/package.json
@@ -93,13 +93,13 @@
   },
   "scripts": {
     "start": "vite",
-    "start-remote": "BACKEND_URI=https://template.mcc-tomsk.de vite",
+    "start-remote": "BACKEND_URI=https://template.mcc-soft.de vite",
     "build": "vite build && yarn build-scss-for-razor",
     "build-scss-for-razor": "sass --load-path=./ src/razor.scss ../webapi/src/MccSoft.TemplateApp.App/wwwroot/css/frontend.css",
     "typecheck": "tsc",
     "generate-api-clients": "concurrently \"yarn generate-api-client-axios\" \"yarn generate-api-client-dotnet\"",
     "generate-api-client-axios": "react-query-swagger openapi2tsclient /input:https://localhost:5001/swagger/v1/swagger.json /output:src/services/api/api-client.ts /template:Axios /serviceHost:. /generateConstructorInterface:true /generateOptionalParameters:true /markOptionalProperties:true /nullValue:undefined /typeStyle:Class && yarn generate-api-client-axios-replace-dateonly && yarn generate-api-client-axios-replace-datetime && yarn replace \"\\\\| undefined;\" \"| null;\" src/services/api/api-client.ts",
-    "generate-api-client-remote": "react-query-swagger openapi2tsclient /input:https://templateapp.mcc-tomsk.de/swagger/v1/swagger.json /output:src/services/api/api-client.ts /template:Axios /serviceHost:. /generateConstructorInterface:true /generateOptionalParameters:true /markOptionalProperties:true /nullValue:undefined /typeStyle:Class && yarn generate-api-client-axios-replace-dateonly && yarn generate-api-client-axios-replace-datetime && yarn replace \"\\\\| undefined;\" \"| null;\" src/services/api/api-client.ts",
+    "generate-api-client-remote": "react-query-swagger openapi2tsclient /input:https://templateapp.mcc-soft.de/swagger/v1/swagger.json /output:src/services/api/api-client.ts /template:Axios /serviceHost:. /generateConstructorInterface:true /generateOptionalParameters:true /markOptionalProperties:true /nullValue:undefined /typeStyle:Class && yarn generate-api-client-axios-replace-dateonly && yarn generate-api-client-axios-replace-datetime && yarn replace \"\\\\| undefined;\" \"| null;\" src/services/api/api-client.ts",
     "generate-api-client-axios-replace-dateonly": "yarn replace \"formatDate\\\\((.*?)\\\\) : <any>undefined\" \"formatDate(\\$1) : \\$1\" src/services/api/api-client.ts",
     "generate-api-client-axios-replace-datetime": "yarn replace \"this\\.(\\\\w*?)\\.toISOString\\\\(\\\\) : <any>undefined\" \"this.\\$1.toISOString() : this.\\$1\" src/services/api/api-client.ts",
     "generate-api-client-dotnet": "nswag openapi2csclient /input:https://localhost:5003/swagger/csharp/swagger.json /output:../webapi/src/MccSoft.TemplateApp.Http/GeneratedClient.cs /templateDirectory:../webapi/src/MccSoft.TemplateApp.Http/template /namespace:MccSoft.TemplateApp.Http.Generated /generateClientInterfaces:true /clientBaseClass:BaseClient /exposeJsonSerializerSettings:true /generateUpdateJsonSerializerSettingsMethod:false /clientBaseInterface:IBaseClient; yarn replace \", NullValueHandling = Newtonsoft.Json.NullValueHandling.Ignore\" \" \" ../webapi/src/MccSoft.TemplateApp.Http/GeneratedClient.cs",
