--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "react-redux": "8.0.2",
     "react-router": "6.3.0",
     "react-router-dom": "6.3.0",
+    "react-router-url-params": "0.2.2",
     "react-table": "7.8.0",
     "react-textarea-autosize": "8.3.4",
     "react-tooltip": "4.2.21",
@@ -52,7 +53,6 @@
     "redux-persist": "6.0.0",
     "sass": "1.53.0",
     "throttle-debounce": "3.0.1",
-    "use-query-params": "1.2.3",
     "web-vitals": "1.1.2"
   },
   "devDependencies": {
@@ -68,7 +68,7 @@
     "@types/react-redux": "7.1.24",
     "@typescript-eslint/eslint-plugin": "5.19.0",
     "@typescript-eslint/parser": "5.19.0",
-    "@vitejs/plugin-react": "2.0.0",
+    "@vitejs/plugin-react": "1.3.2",
     "eslint": "8.20.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-config-react-app": "7.0.1",
@@ -87,18 +87,20 @@
     "replace": "^1.2.1",
     "rollup-plugin-visualizer": "5.6.0",
     "typescript": "4.7.2",
-    "vite": "3.0.2",
+    "vite": "2.9.14",
     "vite-plugin-mkcert": "1.9.0",
     "vite-plugin-react-svg": "0.2.0",
     "vite-plugin-svgr": "2.2.0",
-    "vite-tsconfig-paths": "3.5.0"
+    "vite-tsconfig-paths": "3.5.0",
+    "vitest": "0.19.0"
   },
   "scripts": {
     "start": "vite",
     "start-remote": "BACKEND_URI=https://template.mcc-soft.de vite",
+    "typecheck": "tsc",
+    "test": "vitest",
     "build": "vite build && yarn build-scss-for-razor",
     "build-scss-for-razor": "sass --load-path=./ src/razor.scss ../webapi/src/MccSoft.TemplateApp.App/wwwroot/css/frontend.css",
-    "typecheck": "tsc",
     "generate-api-clients": "concurrently \"yarn generate-api-client-axios\" \"yarn generate-api-client-dotnet\"",
     "generate-api-client-axios": "react-query-swagger openapi2tsclient /input:https://localhost:5001/swagger/v1/swagger.json /output:src/services/api/api-client.ts /template:Axios /serviceHost:. /generateConstructorInterface:true /generateOptionalParameters:true /markOptionalProperties:true /nullValue:undefined /typeStyle:Class && yarn generate-api-client-axios-replace-dateonly && yarn generate-api-client-axios-replace-datetime && yarn replace \"\\\\| undefined;\" \"| null;\" src/services/api/api-client.ts",
     "generate-api-client-remote": "react-query-swagger openapi2tsclient /input:https://templateapp.mcc-soft.de/swagger/v1/swagger.json /output:src/services/api/api-client.ts /template:Axios /serviceHost:. /generateConstructorInterface:true /generateOptionalParameters:true /markOptionalProperties:true /nullValue:undefined /typeStyle:Class && yarn generate-api-client-axios-replace-dateonly && yarn generate-api-client-axios-replace-datetime && yarn replace \"\\\\| undefined;\" \"| null;\" src/services/api/api-client.ts",
