--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typecheck": "yarn frontend typecheck",
     "start": "yarn frontend start",
     "start-remote": "yarn frontend start-remote",
+    "test": "yarn frontend test",
     "generate-api-clients": "yarn frontend generate-api-clients",
     "generate-api-client-remote": "yarn frontend generate-api-client-remote",
     "rename": "node scripts/rename-script.js",
