--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "11.9.3",
+    "@emotion/styled": "11.9.3",
     "@fluentui/react": "8.77.1",
     "@fortawesome/free-solid-svg-icons": "6.1.1",
     "@fortawesome/react-fontawesome": "0.1.18",
-    "@material-ui/core": "4.12.4",
+    "@mui/material": "5.9.2",
+    "@mui/styles": "5.9.2",
+    "@mui/x-date-pickers": "5.0.0-beta.2",
     "@reduxjs/toolkit": "1.8.3",
     "@sentry/react": "6.19.7",
     "@sentry/tracing": "6.19.7",
