--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@emotion/react": "11.9.3",
     "@emotion/styled": "11.9.3",
-    "@fluentui/react": "8.77.1",
     "@fortawesome/free-solid-svg-icons": "6.1.1",
     "@fortawesome/react-fontawesome": "0.1.18",
     "@mui/material": "5.9.2",
@@ -53,6 +52,7 @@
     "react-table": "7.8.0",
     "react-textarea-autosize": "8.3.4",
     "react-tooltip": "4.2.21",
+    "react-use": "17.4.0",
     "redux": "4.2.0",
     "redux-persist": "6.0.0",
     "sass": "1.53.0",
