--- a/frontend/package.json
+++ b/frontend/package.json
@@ -90,7 +90,7 @@
     "prettier": "2.6.2",
     "react-devtools": "4.13.5",
     "redux-devtools-extension": "2.13.9",
-    "replace": "^1.2.1",
+    "replace": "1.2.1",
     "rollup-plugin-visualizer": "5.6.0",
     "typescript": "4.7.2",
     "vite": "2.9.14",
