--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "concurrently": "5.2.0",
     "copyfiles": "2.3.0",
     "cross-env": "7.0.3",
+    "material-ui-popup-state": "4.0.2",
     "node-replace": "0.3.3",
     "prettier": "2.6.2",
     "renamer": "4.0.0",
