--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "js-logger": "1.6.1",
     "jwt-decode": "3.1.2",
     "lottie-web": "5.9.6",
+    "material-ui-popup-state": "4.0.2",
     "nock": "13.2.4",
     "nswag": "13.16.1",
     "oidc-client-ts": "2.0.1",
