--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "1.8.3",
     "@sentry/react": "6.19.7",
     "@sentry/tracing": "6.19.7",
+    "@tanstack/react-query": "4.2.1",
     "@tanstack/react-table": "8.5.5",
     "@types/react-paginate": "7.1.1",
     "@types/react-table": "7.7.10",
@@ -45,8 +46,7 @@
     "react-i18next": "11.15.0",
     "react-js-pagination": "3.0.3",
     "react-paginate": "8.1.2",
-    "react-query": "3.39.2",
-    "react-query-swagger": "13.16.5",
+    "react-query-swagger": "14.2.1",
     "react-redux": "8.0.2",
     "react-router": "6.3.0",
     "react-router-dom": "6.3.0",
@@ -108,8 +108,8 @@
     "build": "vite build && yarn build-scss-for-razor",
     "build-scss-for-razor": "sass --load-path=./ src/razor.scss ../webapi/src/MccSoft.TemplateApp.App/wwwroot/css/frontend.css",
     "generate-api-clients": "concurrently \"yarn generate-api-client-axios\" \"yarn generate-api-client-dotnet\"",
-    "generate-api-client-axios": "react-query-swagger openapi2tsclient /input:https://localhost:5001/swagger/v1/swagger.json /output:src/services/api/api-client.ts /template:Axios /serviceHost:. /generateConstructorInterface:true /generateOptionalParameters:true /markOptionalProperties:true /nullValue:undefined /typeStyle:Class && yarn generate-api-client-axios-replace-dateonly && yarn generate-api-client-axios-replace-datetime && yarn replace \"\\\\| undefined;\" \"| null;\" src/services/api/api-client.ts",
-    "generate-api-client-remote": "react-query-swagger openapi2tsclient /input:https://templateapp.mcc-soft.de/swagger/v1/swagger.json /output:src/services/api/api-client.ts /template:Axios /serviceHost:. /generateConstructorInterface:true /generateOptionalParameters:true /markOptionalProperties:true /nullValue:undefined /typeStyle:Class && yarn generate-api-client-axios-replace-dateonly && yarn generate-api-client-axios-replace-datetime && yarn replace \"\\\\| undefined;\" \"| null;\" src/services/api/api-client.ts",
+    "generate-api-client-axios": "react-query-swagger openapi2tsclient /tanstack /input:https://localhost:5001/swagger/v1/swagger.json /output:src/services/api/api-client.ts /template:Axios /serviceHost:. /generateConstructorInterface:true /generateOptionalParameters:true /markOptionalProperties:true /nullValue:undefined /typeStyle:Class && yarn generate-api-client-axios-replace-dateonly && yarn generate-api-client-axios-replace-datetime && yarn replace \"\\\\| undefined;\" \"| null;\" src/services/api/api-client.ts",
+    "generate-api-client-remote": "react-query-swagger openapi2tsclient /tanstack /input:https://template.mcc-soft.de/swagger/v1/swagger.json /output:src/services/api/api-client.ts /template:Axios /serviceHost:. /generateConstructorInterface:true /generateOptionalParameters:true /markOptionalProperties:true /nullValue:undefined /typeStyle:Class && yarn generate-api-client-axios-replace-dateonly && yarn generate-api-client-axios-replace-datetime && yarn replace \"\\\\| undefined;\" \"| null;\" src/services/api/api-client.ts",
     "generate-api-client-axios-replace-dateonly": "yarn replace \"formatDate\\\\((.*?)\\\\) : <any>undefined\" \"formatDate(\\$1) : \\$1\" src/services/api/api-client.ts",
     "generate-api-client-axios-replace-datetime": "yarn replace \"this\\.(\\\\w*?)\\.toISOString\\\\(\\\\) : <any>undefined\" \"this.\\$1.toISOString() : this.\\$1\" src/services/api/api-client.ts",
     "generate-api-client-dotnet": "nswag openapi2csclient /input:https://localhost:5003/swagger/csharp/swagger.json /output:../webapi/src/MccSoft.TemplateApp.Http/GeneratedClient.cs /templateDirectory:../webapi/src/MccSoft.TemplateApp.Http/template /namespace:MccSoft.TemplateApp.Http.Generated /generateClientInterfaces:true /clientBaseClass:BaseClient /exposeJsonSerializerSettings:true /generateUpdateJsonSerializerSettingsMethod:false /clientBaseInterface:IBaseClient; yarn replace \", NullValueHandling = Newtonsoft.Json.NullValueHandling.Ignore\" \" \" ../webapi/src/MccSoft.TemplateApp.Http/GeneratedClient.cs",
