--- a/webapi/src/MccSoft.TemplateApp.Persistence/MccSoft.TemplateApp.Persistence.csproj
+++ b/webapi/src/MccSoft.TemplateApp.Persistence/MccSoft.TemplateApp.Persistence.csproj
@@ -15,10 +15,7 @@
   <ItemGroup>
     <PackageReference Include="Audit.EntityFramework.Core" Version="19.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.8">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.8"/>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.8" />
     <PackageReference Include="NeinLinq.EntityFrameworkCore" Version="6.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
