Add FeatureFlags to Frontend #43 Add MiniProfiler to the frontend #44

--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -157,5 +157,6 @@
   "ProductDataLoggerJobSettings": {
     "CronExpression": "0 */1 * * *"
   },
-  "DefaultFileStorage": "/files"
+  "DefaultFileStorage": "/files",
+  "MiniProfilerEnabled": false
 }
