--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,6 +55,7 @@
     "react-textarea-autosize": "8.3.4",
     "react-tooltip": "4.2.21",
     "react-use": "17.4.0",
+    "react-window": "1.8.7",
     "redux": "4.2.0",
     "redux-persist": "6.0.0",
     "sass": "1.53.0",
@@ -69,9 +70,10 @@
     "@testing-library/user-event": "12.1.10",
     "@types/jest": "26.0.15",
     "@types/node": "17.0.24",
-    "@types/react": "18.0.15",
+    "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "@types/react-redux": "7.1.24",
+    "@types/react-window": "1.8.5",
     "@typescript-eslint/eslint-plugin": "5.19.0",
     "@typescript-eslint/parser": "5.19.0",
     "@vitejs/plugin-react": "1.3.2",
