--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "cross-env": "7.0.3",
     "date-fns": "2.28.0",
     "dotenv": "16.0.0",
+    "fast-deep-equal": "3.1.3",
     "i18next": "21.6.0",
     "i18next-browser-languagedetector": "6.1.2",
     "i18next-http-backend": "1.3.2",
@@ -94,7 +95,7 @@
     "redux-devtools-extension": "2.13.9",
     "replace": "1.2.1",
     "rollup-plugin-visualizer": "5.6.0",
-    "typescript": "4.7.2",
+    "typescript": "4.8.2",
     "vite": "2.9.14",
     "vite-plugin-mkcert": "1.9.0",
     "vite-plugin-react-svg": "0.2.0",
