--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "react-hook-form": "7.19.0",
     "react-i18next": "11.15.0",
     "react-js-pagination": "3.0.3",
+    "react-merge-refs": "2.0.1",
     "react-paginate": "8.1.2",
     "react-query-swagger": "14.3.2",
     "react-redux": "8.0.2",
