Allow 127.0.0.1 as a redirect URI/CORS

--- a/webapi/src/MccSoft.TemplateApp.App/appsettings.json
+++ b/webapi/src/MccSoft.TemplateApp.App/appsettings.json
@@ -85,6 +85,8 @@
         "RedirectUris": [
           "https://localhost:5003/auth/openid-callback",
           "https://localhost:5003/auth/openid-callback?popup=1",
+          "https://127.0.0.1:5003/auth/openid-callback",
+          "https://127.0.0.1:5003/auth/openid-callback?popup=1",
           "/auth/openid-callback",
           "/auth/openid-callback?popup=1",
           "/swagger/oauth2-redirect.html"
@@ -92,6 +94,8 @@
         "PostLogoutRedirectUris": [
           "https://localhost:5003/auth/signout-callback",
           "https://localhost:5003/auth/signout-callback?popup=1",
+          "https://127.0.0.1:5003/auth/signout-callback",
+          "https://127.0.0.1:5003/auth/signout-callback?popup=1",
           "/auth/signout-callback",
           "/auth/signout-callback?popup=1"
         ]
@@ -132,7 +136,7 @@
   },
   "General": {
     "SiteUrl": "https://template.mcc-soft.de",
-    "CORS": "https://localhost:5003"
+    "CORS": "https://localhost:5003,https://127.0.0.1:5003"
   },
   "DefaultUser": {
     "Username": "admin",
