Enable nullability in Domain

--- a/webapi/src/MccSoft.TemplateApp.Domain/MccSoft.TemplateApp.Domain.csproj
+++ b/webapi/src/MccSoft.TemplateApp.Domain/MccSoft.TemplateApp.Domain.csproj
@@ -9,6 +9,7 @@
       Responsible for representing concepts of the business, information about the
       business situation, and business rules.
     </Description>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <PropertyGroup>
