--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "@fortawesome/react-fontawesome": "0.1.18",
     "@mui/material": "5.10.3",
     "@mui/styles": "5.10.3",
-    "@mui/x-date-pickers": "5.0.0-beta.7",
+    "@mui/x-date-pickers": "5.0.3",
     "@reduxjs/toolkit": "1.8.3",
     "@sentry/react": "6.19.7",
     "@sentry/tracing": "6.19.7",
