--- a/webapi/Lib/WebApi/MccSoft.WebApi.Tests/MccSoft.WebApi.Tests.csproj
+++ b/webapi/Lib/WebApi/MccSoft.WebApi.Tests/MccSoft.WebApi.Tests.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="6.7.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.0" />
     <PackageReference Include="Moq" Version="4.18.2" />
     <PackageReference Include="xunit" Version="2.4.2" />
@@ -15,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Testing\MccSoft.Testing\MccSoft.Testing.csproj" />
     <ProjectReference Include="..\MccSoft.WebApi\MccSoft.WebApi.csproj" />
   </ItemGroup>
 
