--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,8 +35,8 @@
     "jwt-decode": "3.1.2",
     "lottie-web": "5.9.6",
     "material-ui-popup-state": "4.0.2",
-    "nock": "13.2.4",
-    "nswag": "13.16.1",
+    "nock": "13.2.9",
+    "nswag": "13.17.0",
     "oidc-client-ts": "2.0.1",
     "query-string": "7.1.1",
     "rc-tooltip": "5.1.1",
@@ -48,7 +48,7 @@
     "react-js-pagination": "3.0.3",
     "react-merge-refs": "2.0.1",
     "react-paginate": "8.1.2",
-    "react-query-swagger": "14.3.2",
+    "react-query-swagger": "14.4.4",
     "react-redux": "8.0.2",
     "react-router": "6.3.0",
     "react-router-dom": "6.3.0",
@@ -114,7 +114,7 @@
     "generate-api-clients": "concurrently \"yarn generate-api-client-axios\" \"yarn generate-api-client-dotnet\"",
     "generate-api-client-axios": "react-query-swagger openapi2tsclient /tanstack /input:https://localhost:5001/swagger/v1/swagger.json /output:src/services/api/api-client.ts /template:Axios /serviceHost:. /use-recommended-configuration",
     "generate-api-client-remote": "react-query-swagger openapi2tsclient /tanstack /input:https://template.mcc-soft.de/swagger/v1/swagger.json /output:src/services/api/api-client.ts /template:Axios /serviceHost:. /use-recommended-configuration",
-    "generate-api-client-dotnet": "nswag openapi2csclient /input:https://localhost:5003/swagger/csharp/swagger.json /output:../webapi/src/MccSoft.TemplateApp.Http/GeneratedClient.cs /templateDirectory:../webapi/src/MccSoft.TemplateApp.Http/template /namespace:MccSoft.TemplateApp.Http.Generated /generateClientInterfaces:true /clientBaseClass:BaseClient /exposeJsonSerializerSettings:true /generateUpdateJsonSerializerSettingsMethod:false /clientBaseInterface:IBaseClient; yarn replace \", NullValueHandling = Newtonsoft.Json.NullValueHandling.Ignore\" \" \" ../webapi/src/MccSoft.TemplateApp.Http/GeneratedClient.cs",
+    "generate-api-client-dotnet": "nswag openapi2csclient /input:https://localhost:5003/swagger/csharp/swagger.json /output:../webapi/src/MccSoft.TemplateApp.Http/GeneratedClient.cs /templateDirectory:../webapi/src/MccSoft.TemplateApp.Http/template /namespace:MccSoft.TemplateApp.Http.Generated /generateClientInterfaces:true /clientBaseClass:BaseClient /exposeJsonSerializerSettings:true /generateUpdateJsonSerializerSettingsMethod:false /clientBaseInterface:IBaseClient /jsonLibrary:SystemTextJson && yarn replace \", NullValueHandling = Newtonsoft.Json.NullValueHandling.Ignore\" \" \" ../webapi/src/MccSoft.TemplateApp.Http/GeneratedClient.cs",
     "analyze-statoscope": "STATS=1 react-app-rewired build",
     "analyze-sourcemap-size": "source-map-explorer build/static/js/*.js",
     "npm-start": "yarn start"
