--- a/webapi/Lib/Testing/MccSoft.Testing/MccSoft.Testing.csproj
+++ b/webapi/Lib/Testing/MccSoft.Testing/MccSoft.Testing.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Hangfire.Core" Version="1.7.31" />
+    <PackageReference Include="MartinCostello.Logging.XUnit" Version="0.3.0" />
     <PackageReference Include="Xunit.SkippableFact" Version="1.4.13" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
