--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,30 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "11.9.3",
-    "@emotion/styled": "11.9.3",
     "@fortawesome/free-solid-svg-icons": "6.1.1",
     "@fortawesome/react-fontawesome": "0.1.18",
-    "@mui/material": "5.10.3",
-    "@mui/styles": "5.10.3",
-    "@mui/x-date-pickers": "5.0.3",
-    "@reduxjs/toolkit": "1.8.3",
+    "@mui/material": "5.10.12",
+    "@mui/styles": "5.10.10",
+    "@mui/x-date-pickers": "5.0.7",
+    "@reduxjs/toolkit": "1.9.0",
     "@sentry/react": "6.19.7",
     "@sentry/tracing": "6.19.7",
-    "@tanstack/react-query": "4.8.0",
-    "@tanstack/react-table": "8.5.5",
+    "@tanstack/react-query": "4.14.1",
+    "@tanstack/react-table": "8.5.22",
     "@types/react-paginate": "7.1.1",
     "@types/react-table": "7.7.10",
     "axios": "0.26.1",
     "axios-auth-refresh": "3.2.2",
     "browser-tabs-lock": "1.2.15",
-    "clsx": "1.1.1",
+    "clsx": "1.2.1",
     "concurrently": "6.5.1",
     "cross-env": "7.0.3",
-    "date-fns": "2.28.0",
+    "date-fns": "2.29.3",
     "dotenv": "16.0.0",
     "fast-deep-equal": "3.1.3",
-    "i18next": "21.9.1",
+    "i18next": "22.0.4",
     "i18next-browser-languagedetector": "6.1.5",
     "i18next-http-backend": "1.4.1",
     "i18next-intervalplural-postprocessor": "3.0.0",
@@ -34,39 +32,36 @@
     "js-logger": "1.6.1",
     "jwt-decode": "3.1.2",
     "lottie-web": "5.9.6",
-    "material-ui-popup-state": "4.0.2",
+    "material-ui-popup-state": "4.1.0",
     "nock": "13.2.4",
-    "nswag": "13.16.1",
+    "nswag": "13.17.0",
     "oidc-client-ts": "2.0.1",
     "query-string": "7.1.1",
-    "rc-tooltip": "5.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-dropzone": "12.0.4",
-    "react-hook-form": "7.19.0",
+    "react-dropzone": "14.2.3",
+    "react-hook-form": "7.39.1",
     "react-i18next": "11.18.6",
-    "react-js-pagination": "3.0.3",
     "react-merge-refs": "2.0.1",
-    "react-paginate": "8.1.2",
+    "react-paginate": "8.1.3",
     "react-query-swagger": "15.0.4",
     "react-redux": "8.0.2",
-    "react-router": "6.3.0",
-    "react-router-dom": "6.3.0",
-    "react-router-url-params": "0.7.4",
+    "react-router": "6.4.3",
+    "react-router-dom": "6.4.3",
+    "react-router-url-params": "0.7.5",
     "react-table": "7.8.0",
     "react-textarea-autosize": "8.3.4",
-    "react-tooltip": "4.2.21",
     "react-use": "17.4.0",
     "react-window": "1.8.7",
     "redux": "4.2.0",
     "redux-persist": "6.0.0",
-    "sass": "1.53.0",
+    "sass": "1.56.0",
     "throttle-debounce": "3.0.1",
     "web-vitals": "1.1.2"
   },
   "devDependencies": {
-    "@import-meta-env/cli": "0.1.7",
-    "@import-meta-env/unplugin": "0.1.8",
+    "@import-meta-env/cli": "0.2.2",
+    "@import-meta-env/unplugin": "0.2.1",
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "11.1.0",
     "@testing-library/user-event": "12.1.10",
@@ -79,24 +74,22 @@
     "@typescript-eslint/eslint-plugin": "5.19.0",
     "@typescript-eslint/parser": "5.19.0",
     "@vitejs/plugin-react": "2.1.0",
-    "eslint": "8.20.0",
-    "eslint-config-prettier": "8.3.0",
+    "eslint": "8.26.0",
+    "eslint-config-prettier": "8.5.0",
     "eslint-config-react-app": "7.0.1",
-    "eslint-plugin-flowtype": "8.0.3",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jest": "26.6.0",
+    "eslint-plugin-jest": "27.1.3",
     "eslint-plugin-jest-formatting": "3.1.0",
     "eslint-plugin-no-null": "1.0.2",
-    "eslint-plugin-prefer-arrow": "1.2.3",
     "eslint-plugin-prettier": "4.2.1",
-    "eslint-plugin-react": "7.30.1",
+    "eslint-plugin-react": "7.31.10",
     "eslint-plugin-react-hooks": "4.6.0",
-    "prettier": "2.6.2",
+    "prettier": "2.7.1",
     "react-devtools": "4.13.5",
     "redux-devtools-extension": "2.13.9",
-    "replace": "1.2.1",
+    "replace": "1.2.2",
     "rollup-plugin-visualizer": "5.6.0",
-    "typescript": "4.8.2",
+    "typescript": "4.8.4",
     "vite": "3.1.0",
     "vite-plugin-mkcert": "1.9.0",
     "vite-plugin-react-svg": "0.2.0",
@@ -107,7 +100,7 @@
   "scripts": {
     "start": "vite",
     "start-remote": "BACKEND_URI=https://template.mcc-soft.de vite",
-    "typecheck": "tsc",
+    "typecheck": "tsc && eslint \\*\\*/\\*.ts \\*\\*/\\*.tsx --quiet",
     "test": "vitest",
     "build": "vite build && yarn build-scss-for-razor",
     "build-scss-for-razor": "sass --load-path=./ src/razor.scss ../webapi/src/MccSoft.TemplateApp.App/wwwroot/css/frontend.css",
