--- a/.ci/azure-pipelines.yml
+++ b/.ci/azure-pipelines.yml
@@ -35,8 +35,11 @@ stages:
 
           - script: |
               yarn build-frontend
-              yarn copy-frontend
             displayName: 'build frontend'
+
+          - script: |
+              yarn copy-frontend
+            displayName: 'copy frontend to backend'
 
           - template: ./build-import-meta-env.yml
 
